What happens if we swap long running tasks with newThreadPerTaskExecutor